k8s/arr/qbittorrent/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: qbittorrent-vpn
  namespace: arr
  labels:
    app: qbittorrent-vpn
spec:
  restartPolicy: Always
  containers:
  - name: gluetun
    image: qmcgaw/gluetun:latest
    securityContext:
      capabilities:
        add: ["NET_ADMIN"]
      privileged: true   # sometimes required depending on your runtime
    volumeMounts:
      - name: dev-net-tun
        mountPath: /dev/net/tun
      - name: config
        mountPath: /config
      - name: downloads
        mountPath: /downloads
  - name: qbittorrent
    image: lscr.io/linuxserver/qbittorrent:latest
    ports:
      - containerPort: 8080
        name: webui
  volumes:
    - name: dev-net-tun
      hostPath:
        path: /dev/net/tun
        type: CharDevice
    - name: config
      persistentVolumeClaim:
        claimName: qbittorrent-data-pvc
    - name: downloads
      nfs:
          server: 192.168.2.254
          path: /mnt/tank/downloads
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-vpn
  namespace: arr
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: webui
  selector:
    app: qbittorrent-vpn
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbit-gateway
  namespace: arr
spec:
  parentRefs:
  - name: gateway-local-koryalbert
    namespace: gateway
    sectionName: local-koryalbert-net
  hostnames:
  - "downloader.local.koryalbert.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: qbittorrent-vpn
      port: 8080
